# Orion-range

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.pt-BR.md  ROADMAP.md  SECURITY.md
backend/: Dockerfile  README.md  orion.db  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_blueprints.py  routes_jobs.py  routes_metrics.py  routes_mitre.py  routes_ops.py  routes_scenarios.py  routes_version.py
backend/app/core/: auth.py  config.py  errors.py  log_context.py  logging.py  observability.py  security.py  time_utils.py
backend/app/db/: session.py
backend/app/models/: baseline.py  blueprint.py  job.py  job_step.py  revoked_token.py  scenario_run.py  user.py  user_token_state.py
backend/app/schemas/: auth.py  blueprint.py  job.py  scenario.py
backend/app/services/: baseline_repository.py  blueprint_repository.py  blueprint_store.py  blueprint_validator.py  gc.py  job_repository.py  job_runner.py  job_step_repository.py  ops_overview.py  scenario_repository.py  scenario_runner.py  token_revocation_repository.py  user_repository.py  user_token_state_repository.py
backend/app/tests/: test_auth.py  test_auth_jwt.py  test_blueprints.py  test_health.py  test_job_runner_unit.py  test_jobs.py  (+9 more)
backend/migrations/: 0001_create_blueprints.sql  0002_create_jobs.sql  0003_placeholder.sql  0004_create_baselines.sql  0005_create_scenario_runs.sql  0006_create_job_steps.sql  0007_add_org_id.sql  0008_create_users.sql  0009_create_revoked_tokens.sql  0010_create_user_token_states.sql
backend/scripts/: proxmox_smoke.py
(+18 files in other folders)
